# toastmasters-club-reporter

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
pathways/: dynamic-leadership.json  effective-coaching.json  engaging-humor.json  index.json  innovative-planning.json  leadership-development.json  motivational-strategies.json  persuasive-influence.json  presentation-mastery.json  strategic-relationships.json  team-collaboration.json  visionary-communication.json
src/: main.py
src/api/: client_api.py
src/config/: app_settings.py
src/log/: logger.py
src/manager/: environment_manager.py  file_manager.py  toastmasters_manager.py
src/model/: club.py  member.py
src/security/: auth.py
src/service/: pathway_analyzer_service.py  toastmasters_api_service.py  toastmasters_data_service.py  toastmasters_report_service.py
src/utils/report/: excel_builder.py  markdown_builder.py  pdf_builder.py  pdf_builder_old.py
src/utils/report/html/: html_builder.py
src/utils/report/html/scripts/: charts.js  table-expand.js  theme-toggle.js
src/utils/report/html/styles/: main.css
