[project]
name = "toastmasters-club-reporter"
version = "1.0.1"
description = "A Python application that collects club and member data from Toastmasters International APIs and generates comprehensive reports in multiple formats."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "playwright",
    "openpyxl",
    "python-dotenv",
    "urllib3",
    "requests",
    "reportlab",
    "pandas"
]
